# tugrik-telegram-bot

./: README.md  bot.py  loader.py  pyproject.toml  requirements.txt
classes/: user.py
constants/: buttons.py
data/: config.py
handlers/: __init__.py
handlers/commands/: __init__.py  admin.py  default.py
handlers/errors/: errors_handler.py
handlers/messages/: keyboard.py
keyboards/: keyboard.py
utils/: __init__.py  functions.py  scheduler.py  set_bot_commands.py
